<?xml version="1.0"?>
<package format="3">
  <name>sawyer_description</name>
  <version>5.3.0</version>
  <description>
    Description of Sawyer Robot from Rethink Robotics.
    This package contains the URDF and meshes describing Sawyer.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_robot
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_robot/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- <exec_depend>joint_state_publisher</exec_depend> -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
